--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ loom_version=1.10-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.enderboy9217.template
-archives_base_name=enders-template
+maven_group=com.enderboy9217.phantoms
+archives_base_name=enders-phantoms
 
 # Dependencies
 fabric_version=0.92.5+1.20.1
